--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "nodemon": "^2.0.14",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "yargs": "^17.2.1"
   },
   "type": "module"
 }
